segmentation fault - scene #38654

Closed
opened 2014-02-15 22:50:43 +01:00 by Shane Neph · 9 comments

System Information
Operating system and graphics card

uname -a

3.11.0-15-generic #25-Ubuntu SMP Thu Jan 30 17:22:01 UTC 2014 x86_64 x86_64 x86_64 GNU/Linux
Nvidia: GK107 [GeForce GTX 650]

Blender Version
Broken: (example: 2.69.7 4b206af, see splash screen)
2.69.8 (note that the .8 does not appear on the splash screen - received via python console - perhaps update the note directly above regarding the splash screen?). Hash c925b5b. Official download.
2.69.10 (same note) Hash aa517ab. Fresh checkout via git.

Short description of error
Segmentation fault and application closure.

Exact steps for others to reproduce the error
Based on a (as simple as possible) attached .blend file with minimum amount of steps
Open Blender
Select default cube
Open logic editor
Add always sensor
Add scene actuator
Connect sensor to actuator
In actuator, set mode to SetCamera
In actuator, select 'Cube' from Camera Object: drop-down menu
Choose 'Blender Game' in info header (this is optional)
In 3-d view, press 'p' to start game
Press escape to end game -> application closes. command-line shows 'segmentation fault'

I'm new to Blender and using the Cube for this SetCamera mode may not make sense. If not, then the Cube shouldn't be in the drop down (perhaps only cameras?). I've attached the spit out from using --debug-all with the 2.69.10 version.

debug.info

bugreport.blend

**System Information** Operating system and graphics card > uname -a 3.11.0-15-generic #25-Ubuntu SMP Thu Jan 30 17:22:01 UTC 2014 x86_64 x86_64 x86_64 GNU/Linux Nvidia: GK107 [GeForce GTX 650] **Blender Version** Broken: (example: 2.69.7 4b206af, see splash screen) 2.69.8 (note that the .8 does not appear on the splash screen - received via python console - perhaps update the note directly above regarding the splash screen?). Hash c925b5b. Official download. 2.69.10 (same note) Hash aa517ab. Fresh checkout via git. **Short description of error** Segmentation fault and application closure. **Exact steps for others to reproduce the error** Based on a (as simple as possible) attached .blend file with minimum amount of steps Open Blender Select default cube Open logic editor Add always sensor Add scene actuator Connect sensor to actuator In actuator, set mode to SetCamera In actuator, select 'Cube' from Camera Object: drop-down menu Choose 'Blender Game' in info header (this is optional) In 3-d view, press 'p' to start game Press escape to end game -> application closes. command-line shows 'segmentation fault' I'm new to Blender and using the Cube for this SetCamera mode may not make sense. If not, then the Cube shouldn't be in the drop down (perhaps only cameras?). I've attached the spit out from using --debug-all with the 2.69.10 version. [debug.info](https://archive.blender.org/developer/F77396/debug.info) [bugreport.blend](https://archive.blender.org/developer/F77395/bugreport.blend)
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

Added subscriber: @sjn

Added subscriber: @sjn

Added subscriber: @Harshit-3

Added subscriber: @Harshit-3
Mitchell Stokes was assigned by Sergey Sharybin 2014-02-17 08:28:42 +01:00

Added subscribers: @Moguri, @Sergey

Added subscribers: @Moguri, @Sergey

@Moguri, mind looking into the issue? It's something really unclear happening there..

@Moguri, mind looking into the issue? It's something really unclear happening there..

This issue was referenced by blender/blender-addons-contrib@16c75cf594

This issue was referenced by blender/blender-addons-contrib@16c75cf594a92b232e46f922d644ac0a70088bad

This issue was referenced by 16c75cf594

This issue was referenced by 16c75cf594a92b232e46f922d644ac0a70088bad

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Closed by commit 16c75cf594.

Closed by commit 16c75cf594.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#38654
No description provided.