source/gameengine/Converter/KX_ConvertActuators.cpp
@@ -758,7 +758,9 @@ void BL_ConvertActuators(const char* maggiename,
 					mode = KX_SceneActuator::KX_SCENE_SET_CAMERA;
 					if (sceneact->camera)
 					{
-						cam = (KX_Camera*) converter->FindGameObject(sceneact->camera);
+						KX_GameObject *tmp = converter->FindGameObject(sceneact->camera);
+						if (tmp && tmp->GetGameObjectType() == SCA_IObject::OBJ_CAMERA)
+							cam = (KX_Camera*)tmp;
 					}
 					break;
 				case ACT_SCENE_RESTART:
